# E-commerce

./: .env_example  .gitignore  doc_2025-08-25_17-55-05.env  pyproject.toml  pytest.ini  requirements.txt  tox.ini
E-commerce/Card/: List.bru  folder.bru  remove_card.bru  to_card.bru
E-commerce/Category/: Create.bru  List.bru  Post.bru  Update.bru
E-commerce/JWT/: Login.bru  Refresh Token.bru  folder.bru
E-commerce/Order/: List.bru  Retrive.bru  change_order_status.bru  to_order.bru
E-commerce/Product/: Create.bru  Delete.bru  List.bru  Post.bru  Retrive.bru  Update.bru
E-commerce/SubCategory/: Delete.bru  List.bru  Post.bru  Retrive.bru  Update.bru  folder.bru
E-commerce/User/: Reset Password Confirm.bru  Reset Password.bru  list.bru  logout.bru  register.bru
E-commerce/environments/: commerce.bru
Shop/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
Shop/management/commands/: seed.py
Shop/migrations/: 0001_initial.py  0002_card_cardproduct_order_orderedproduct.py  0003_alter_product_stock.py  0004_alter_product_stock.py  0005_order_latitude_order_longitude.py
Shop/tests/: test_flash_sales.py  test_integrity.py  test_models.py  test_payment.py  test_reset_code.py  test_view.py
root/: celery.py  settings.py  urls.py  wsgi.py
